# libvideo-metadata

./: CMakeLists.txt
include/video-metadata/: vmeta.pb-c.h  vmeta_frame_proto.h  vmeta_frame_v1.h  vmeta_frame_v2.h  vmeta_frame_v3.h
src/: protobuf-c.c  systimetools.c  vmeta.pb-c.c  vmeta_frame.c  vmeta_frame_proto.c  vmeta_frame_v1.c  vmeta_frame_v2.c  vmeta_frame_v3.c  vmeta_priv.h  vmeta_session.c  vmeta_utils.c
